Fix Grid/Map tab titles layout overspill
I think having the seperator is not properly supported by the
foundation CSS. I was a bit confused with app.css as some seems to
be vendor CSS and some custom CSS, so I left the original padding
rule, and added an override in what seems more like a "custom CSS"
section...

I don't know why they didn't all just float nicely
together in the first place though :/

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6649,6 +6649,7 @@ a:focus {
 
 .tabs-title > a {
   color: #999999;
+  padding: 1.25rem 1.25rem;
   font-size: 1rem; }
   .tabs-title > a:focus, .tabs-title > a[aria-selected='true'] {
     background-color: transparent;
